changed the key

--- a/speedtracker.yml
+++ b/speedtracker.yml
@@ -37,7 +37,7 @@
 #                                                                             #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-encryptionKey: "intelligent"
+encryptionKey: "d029e69e11d504a55a91b1"
 
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
